created facilities info

--- a/facilities.html
+++ b/facilities.html
@@ -43,37 +43,44 @@
 <section class="section-jumbotron">
 <div class="jumbotron jumbotron-fluid mt-5 text-center">
   <div class="container">
-    <h1 class="display-4 text-center">Facilities</h1>
-    <p class="lead text-center">We are more than a simple spa centre</p>
+    <h1 class="section-heading display-4 text-center">Facilities</h1>
+    <p class="lead text-center sub-heading">We are more than a simple spa centre</p>
   </div>
 </div>
 </div>
 </section>
-<section class="page-section-about">
-    <div class="container">
+<section class="page-section" id="facilitiesSection">
+  <div class="container facilities-container">
       <div class="row">
-        <div class= "col-12 col-md-6 pt-4 ">
-         <img src="/assets/images/pool-image.jpg" class="" width="500" height="400"alt="spa-humidifier-image">
-    </div>
-    <div class= "col-12 col-md-6 text-center">
-              <div class="facilities-info mt-5 fs-5 align-self-center">
-                <h2>Indoor Pool</h2>
-              <p>EvimeriaSpa Leisure Centre, located in Putney is one of the most distinctive environments in which to restore mind, body and spirit. Owning its name to Greek word "ευημερία" EvimeriaSpa promises to bring prosperity to the costumers' life while experiencing our luxury and unique services. 
-                With more than 1at genuinely transform your skin.</p>
-              </div> 
-              </div>
-    <div class="row">
-      <div class= "col-12 col-md-6 text-center mt-5">
-        <div class="facilities-info fs-5">
-          <h2>Caffeteria</h2>
-        <p>EvimeriaSpa Leisure Centre, located in Putney is one of the most distinctive environments in which to restore mind, body and spirit. Owning its name to Greek word "ευημερία" EvimeriaSpa promises to bring prosperity to the costumers' life while experiencing our luxury and unique services. 
-          With more than 1at genuinely transform your skin.</p>
-        </div> 
-        </div>
-        <div class= "col-12 col-md-6 p-5">
-          <img src="/assets/images/coffee-image.jpg" class="" width="500" height="400"alt="spa-humidifier-image">
-        </div>
-</section>
+          <div class="col-md-6 mb-4 mb-lg-6 facility-image">
+              <img src="/assets/images/message-image.jpeg" alt="Man running on treadmill">
+          </div>
+          <div class="col-md-6 mb-4 mb-lg-6 facility-info align-self-center">
+              <h2>Private masssage room</h2>
+              <p>Our private massage room are equipped with comfortable massage table.</p>    
+          </div>
+      </div>
+      <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="col-md-6 mb-4 mb-lg-6 facility-info p-2 align-self-center">
+              <h2>Indoors Pool</h2>
+              <p>Our indoors pool, is availiable for every costumer want to experience the unique relaxing feeling of water after a spa treatment</p>    
+          </div>
+          <div class="col-md-6 mb-4 mb-lg-6 facility-image p-2">
+              <img src="/assets/images/pool-image.jpg" class="flex-end"alt="Kettlebells lined up in a row.">
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-md-6 mb-4 mb-lg-6 facility-image">
+              <img src="/assets/images/coffee-image.jpg" alt="Man working out on weights machine.">
+          </div>
+          <div class="col-md-6 mb-4 mb-lg-6 facility-info align-self-center">
+              <h2>Lounge Caffe</h2>
+              <p>Our high designed lounge caffee is availiable for any costumer would like to have a ship of free coffee, after or before the spa treatment </p>    
+          </div>
+      </div>
+      </div>
+  </div>     
+</section>       
 
 
 
