changes to nav-bar, still need to be modified

--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
 <header>
   <!-- Navigation Bar copied and then modified from Bootstap documentation - https://getbootstrap.com/docs/4.5/components/navbar/-->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">SpaThermal</a>
+    <a class="navbar-brand fs-3" href="#">ThermalSpa</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
+          <a class="nav-link fs-3" href="index.html">Home <span class="sr-only"></span></a>
         </li>
         <li class="nav-item ms-auto">
-          <a class="nav-link" href="#">Services</a>
+          <a class="nav-link fs-3" href="#" >Services</a>
         </li>
         <li class="nav-item ms-auto">
-          <a class="nav-link" href="facilities.html">Facilities</a>
+          <a class="nav-link fs-3" href="facilities.html">Facilities</a>
         </li>
         <li class="nav-item ms-auto">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link fs-3" href="#">Contact</a>
         </li>
        
       </ul>
@@ -45,12 +45,12 @@
 <!--Banner Hero Image-->
 <div class="container-fluid banner-image-container banner-hero-image-container">
   <div class="row">
-      <div class="col-12 text-right">
+      <div class="col-12 ms-5">
           <section class="jumbotron">
-              <h1>
+              <h1 class="text-center">
               Welcome to ThermalSpa
               </h1>
-              <h2>
+              <h2 class="text-center">
               The best spa in town!
               </h2>
               <hr class="my-4">
