facilities info text modified

--- a/facilities.html
+++ b/facilities.html
@@ -22,9 +22,9 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav nav ml-auto">
+      <ul class="navbar-nav nav ms-auto">
         <li class="nav-item text-rightactive">
-          <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
         </li>
         <li class="nav-item text-right">
           <a class="nav-link" href="#">Services</a>
@@ -40,30 +40,39 @@
     </div>
   </nav>
 </header>
-<section class="section-jumbotron">
-<div class="jumbotron jumbotron-fluid mt-5 text-center">
-  <div class="container">
-    <h1 class="section-heading display-4 text-center">Facilities</h1>
-    <p class="lead text-center sub-heading">We are more than a simple spa centre</p>
+<div class="container-fluid banner-image-container banner-image-facilities-container">
+  <div class="row">
+      <div class="col-12">
+          <section class="jumbotron text-center">
+              <h1>
+              ThermalSpa
+              </h1>
+              <h2>
+              We are more than a simpe spa center
+              </h2>
+          </section>
+      </div>
   </div>
 </div>
-</div>
-</section>
-<section class="page-section" id="facilitiesSection">
-  <div class="container facilities-container">
+
+
+<section class="page-section">
+  <div class="container mt-5">
       <div class="row">
           <div class="col-md-6 mb-4 mb-lg-6 facility-image">
-              <img src="/assets/images/message-image.jpeg" alt="Man running on treadmill">
+              <img src="/assets/images/message-image.jpeg" alt="massage-table">
           </div>
-          <div class="col-md-6 mb-4 mb-lg-6 facility-info align-self-center">
-              <h2>Private masssage room</h2>
-              <p>Our private massage room are equipped with comfortable massage table.</p>    
+          <div class="col-md-6 mb-4 mb-lg-6 facility-info align-self-center p-5">
+              <h2>Private treatment room</h2>
+              <p>Explore our whole range of spa experience rooms — uplifting aromas, soothing steam and calming music make the perfect sensual and relaxing environment. 
+                Our private treatment rooms are equipped with electric couchs that enhances comfort while experiencing your favourite treatment. Featuring a high-quality frame and hard-wearing cushioning, all message tables include electronically adjusted positions for additional relaxation.
+                </p>    
           </div>
       </div>
       <div class="row d-flex flex-column-reverse flex-md-row">
           <div class="col-md-6 mb-4 mb-lg-6 facility-info p-2 align-self-center">
               <h2>Indoors Pool</h2>
-              <p>Our indoors pool, is availiable for every costumer want to experience the unique relaxing feeling of water after a spa treatment</p>    
+              <p>Our pool is specially designed with anti-slip flooring and the swim area allows for a variety of different activities. You can swim against the swim current which allows you to adjust to your own preferred level.Control your workout intensity, movement and speed with the hydropool, which specifically matches your needs, thus creating the prefect training environment.The hydropool has a Sonos Audio Surround System so you can listen to your favourite music while relaxing or training.</p>    
           </div>
           <div class="col-md-6 mb-4 mb-lg-6 facility-image p-2">
               <img src="/assets/images/pool-image.jpg" class="flex-end"alt="Kettlebells lined up in a row.">
@@ -75,7 +84,7 @@
           </div>
           <div class="col-md-6 mb-4 mb-lg-6 facility-info align-self-center">
               <h2>Lounge Caffe</h2>
-              <p>Our high designed lounge caffee is availiable for any costumer would like to have a ship of free coffee, after or before the spa treatment </p>    
+              <p>Refuel your body and soul within the serenity of Thermal Spa in our beautiful lounge cafe, which offers a selection of healthy and nourishing snacks and dishes. You can choose from a delicious range of  healthy meals, designed in collaboration with nutritionists or relax with a herbal tea, cold pressed juices and a protein shake.</p>    
           </div>
       </div>
       </div>
