changed hero image and overlay added

--- a/facilities.html
+++ b/facilities.html
@@ -41,15 +41,19 @@
   </nav>
 </header>
 <div class="container-fluid banner-image-container banner-image-facilities-container">
+  <div class="opaque-overlay">&nbsp;</div>
   <div class="row">
+    
       <div class="col-12">
           <section class="jumbotron text-center">
+            <div class="facilities-headings">
               <h1>
               ThermalSpa
               </h1>
               <h2>
-              We are more than a simpe spa center
+              We are more than a simple spa center
               </h2>
+              </div>
           </section>
       </div>
   </div>
