changed height of banner image

--- a/facilities.html
+++ b/facilities.html
@@ -40,13 +40,14 @@
     </div>
   </nav>
 </header>
-<div class="container-fluid banner-image-container banner-image-facilities-container">
+
+<div class="container-fluid hero-image-container banner-image-facilities-container">
   <div class="opaque-overlay">&nbsp;</div>
   <div class="row">
     
       <div class="col-12">
           <section class="jumbotron text-center">
-            <div class="facilities-headings">
+            <div class="hero-images-headings">
               <h1>
               ThermalSpa
               </h1>
@@ -58,6 +59,7 @@
       </div>
   </div>
 </div>
+
 
 
 <section class="page-section">
