--- a/contact.html
+++ b/contact.html
@@ -64,22 +64,22 @@
       <div class="col-md-9">
           <div class="contact-us text-center">
               <h3>Contact Us</h3>
-              <p class="mb-5">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+              <p class="mb-5">ThermalSpa would love to hear from you and respond within 24 hours</p>
               <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-md-6 contact-details">
                       <div class="mt-5 text-center px-3">
-                          <div class="d-flex flex-row align-items-center"> <span class="icons"><i class="fa fa-map-marker"></i></span>
+                          <div class="d-flex flex-row align-items-center contact-details"> <span class="icons"><i class="fa fa-map-marker"></i></span>
                               <div class="address text-left"> <span>Address</span>
                                   <p>143 Upper Richmond Road</p>
                               </div>
                           </div>
-                          <div class="d-flex flex-row align-items-center mt-3"> <span class="icons"><i class="fa fa-phone"></i></span>
-                              <div class="address text-left"> <span>Phone</span>
+                          <div class="d-flex flex-row align-items-center mt-3 contact-details"> <span class="icons"><i class="fa fa-phone"></i></span>
+                              <div class="phone text-left"> <span>Phone</span>
                                   <p>0789456732</p>
                               </div>
                           </div>
-                          <div class="d-flex flex-row align-items-center mt-3"> <span class="icons"><i class="fa fa-envelope-o"></i></span>
-                              <div class="address text-left"> <span>Email</span>
+                          <div class="d-flex flex-row align-items-center mt-3 contact-details"> <span class="icons"><i class="fas fa-envelope-square"></i></span>
+                              <div class="email text-left"> <span>Email</span>
                                   <p>thermalspa@gmail.com</p>
                               </div>
                           </div>
@@ -108,7 +108,6 @@
       <input type="tel" class="form-control" id="number" aria-describedby="number" placeholder="Enter your Phone Number" required="required"> 
       </div> 
       <div class="form-group p-1" >
-        <label for="exampleFormControlSelect1">Specify your enquiry</label>
         <select class="form-control" id="exampleFormControlSelect1">
           <option value="" selected disabled>--Select Your need--</option>
           <option>About treatments</option>
