--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/style.css">
+    <link
+    rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <title>First Milestone Project</title>
 </head>
 <body>
@@ -34,7 +37,7 @@
           <a class="nav-link fs-3" href="facilities.html">Facilities</a>
         </li>
         <li class="nav-item ms-auto">
-          <a class="nav-link fs-3" href="#">Contact</a>
+          <a class="nav-link fs-3" href="contact.html">Contact</a>
         </li>
        
       </ul>
@@ -47,7 +50,7 @@
   <div class="row">
       <div class="col-12 ms-5">
           <section class="jumbotron">
-              <h1 class="text-center">
+              <h1 class="text-center animate__animated animate__bounce">
               Welcome to ThermalSpa
               </h1>
               <h2 class="text-center">
@@ -213,7 +216,7 @@
       <div class="col-sm-12 mt-4 col-md-6 col-lg-3 p-2">
         <h4 class="general-heading text-center p-1">Social Media</h4>
         <ul class="list-inline ">
-            <li class="list-inline-item social-links">
+            <li class="list-inline-item social-links text-center">
               <a class="btn btn-primary" style="background-color: #3b5998;" href="#!" role="button"
               ><i class="fab fa-facebook-f"></i
             ></a>
