--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
 <header>
   <!-- Navigation Bar copied and then modified from Bootstap documentation - https://getbootstrap.com/docs/4.5/components/navbar/-->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand fs-3" href="#">ThermalSpa</a>
+    <a class="navbar-brand" href="#" class="logo"><i class="fas fa-spa"></i>ThermalSpa</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link fs-3" href="index.html">Home <span class="sr-only"></span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
         </li>
         <li class="nav-item ms-auto">
-          <a class="nav-link fs-3" href="#" >Services</a>
+          <a class="nav-link" href="#" >Services</a>
         </li>
         <li class="nav-item ms-auto">
-          <a class="nav-link fs-3" href="facilities.html">Facilities</a>
+          <a class="nav-link" href="facilities.html">Facilities</a>
         </li>
         <li class="nav-item ms-auto">
-          <a class="nav-link fs-3" href="contact.html">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
        
       </ul>
