--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <header>
   <!-- Navigation Bar copied and then modified from Bootstap documentation - https://getbootstrap.com/docs/4.5/components/navbar/-->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">SpaThermal</a>
+    <a class="navbar-brand" href="index.html"><i class="fas fa-spa logo-icon"></i>ThermalSpa</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
