font family and style changed, headings added to jumbotron, cleaner structure of layout

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <header>
   <!-- Navigation Bar copied and then modified from Bootstap documentation - https://getbootstrap.com/docs/4.5/components/navbar/-->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#" class="logo"><i class="fas fa-spa"></i>ThermalSpa</a>
+    <a class="navbar-brand" href="#" class="logo"><i class="fas fa-spa logo-icon"></i>ThermalSpa</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -46,14 +46,14 @@
 </header>
 
 <!--Banner Hero Image-->
-<div class="container-fluid banner-image-container banner-hero-image-container">
+<div class="container-fluid banner-image-container banner-hero-image-container page-headings">
   <div class="row">
       <div class="col-12 ms-5">
           <section class="jumbotron">
-              <h1 class="text-center animate__animated animate__bounce">
+              <h1 class="text-center animate__animated animate__bounce jumbotron-main-headings">
               Welcome to ThermalSpa
               </h1>
-              <h2 class="text-center">
+              <h2 class="text-center jumbotron-main-headings">
               The best spa in town!
               </h2>
               <hr class="my-4">
@@ -65,20 +65,19 @@
       </div>
   </div>
 </div>
-</section>
   <section class="page-section-about">
     <div class="container">
       <div class="row">
         <div class="col-md-12 pt-5">
-          <h2 class="section-heading text-center text-uppercase ">About Us</h2>
+          <h2 class=" text-center text-uppercase section-heading ">About Us</h2>
           </div>
           </div>
           <br>
-          <div class="row welcome-section">
+          <div class="row">
             <div class= "col-12 col-md-6 pt-4 ">
-              <h5 class="sub-heading text-center fs-2">A warm Welcome</h5>
+              <h5 class="text-center section-sub-heading fs-2">A warm Welcome</h5>
               <br>
-              <div class="welcome-text text-center fs-5">
+              <div class="text-center about-info">
               <p>EvimeriaSpa Leisure Centre, located in Putney is one of the most distinctive environments in which to restore mind, body and spirit. Owning its name to Greek word "ευημερία" EvimeriaSpa promises to bring prosperity to the costumers' life while experiencing our luxury and unique services. 
                 With more than 100 years of operation, we work hard to create a friendly day spa environment, that includes a range of modern facilities and provides affordable packages delivered by friendly, trained professionals. 
                 Our therapists harness the power of nature and science to create ground-breaking formulations that genuinely transform your skin.</p>
