added heading to all pages have jumbotron

--- a/facilities.html
+++ b/facilities.html
@@ -42,19 +42,17 @@
 </header>
 
 <div class="container-fluid hero-image-container banner-image-facilities-container">
-  <div class="opaque-overlay">&nbsp;</div>
   <div class="row">
     
       <div class="col-12">
           <section class="jumbotron text-center">
-            <div class="hero-images-headings">
-              <h1>
+            <h1 class="jumbotron-headings">
               ThermalSpa
               </h1>
-              <h2>
+              <h2 class="jumbotron-headings">
               We are more than a simple spa center
               </h2>
-              </div>
+            
           </section>
       </div>
   </div>
