--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
   <div class="row">
       <div class="col-12 ms-5">
           <section class="jumbotron">
-              <h1 class="text-center animate__animated animate__bounce jumbotron-main-headings">
+              <h1 class="text-center animate__animated animate__bounce jumbotron-headings">
               Welcome to ThermalSpa
               </h1>
-              <h2 class="text-center jumbotron-main-headings">
+              <h2 class="text-center jumbotron-headings">
               The best spa in town!
               </h2>
               <hr class="my-4">
