--- a/contact.html
+++ b/contact.html
@@ -45,11 +45,10 @@
     <div class="row">
         <div class="col-12">
             <section class="jumbotron text-center">
-              <div class="hero-images-headings">
-                <h1>
+             <h1 class="jumbotron-headings">
                 Want to know more?
                 </h1>
-                <h2>
+                <h2 class="jumbotron-headings">
                 Get in touch
                 </h2>
             </section>
