--- a/facilities.html
+++ b/facilities.html
@@ -52,17 +52,57 @@
               <h2 class="jumbotron-headings">
               We are more than a simple spa center
               </h2>
-            
           </section>
       </div>
   </div>
 </div>
-
-
-
 <section class="page-section">
   <div class="container mt-5">
-      <div class="row">
+
+<div class="row services-area text-center">
+<div class="col-md-12 col-md-6 col-lg-3">
+  <i class="fas fa-swimming-pool"></i>
+  <h1>Indoor Pool</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis consequatur magnam ullam harum libero. Debitis, in vitae consequuntur minima saepe pariatur officiis iure dicta eius doloremque. A, nemo cumque. Numquam.</p>
+</div>
+</div>
+
+<div class="row services-area text-center">
+  <div class="col-md-12 col-md-6 col-lg-3">
+        <i class="fas fa-thermometer-three-quarters"></i>
+        <h1>Thermal Spa</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis consequatur magnam ullam harum libero. Debitis, in vitae consequuntur minima saepe pariatur officiis iure dicta eius doloremque. A, nemo cumque. Numquam.</p>
+        <div class="row services-find-out-more-button-row">
+          <div class="col-12 text-center">
+              <a href="#" class="btn btn--cta btn--grey">
+                Availiability
+              </a>
+          </div>
+      </div>
+      </div>
+  <div class="row services-area text-center">
+        <div class="col-md-12 col-md-6 col-lg-3">
+              <i class="fas fa-hot-tub"></i>
+              <h1>Hammam</h1>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis consequatur magnam ullam harum libero. Debitis, in vitae consequuntur minima saepe pariatur officiis iure dicta eius doloremque. A, nemo cumque. Numquam.</p>
+            </div>
+            </div>
+            <div class="row services-area text-center">
+              <div class="col-md-12 col-md-6 col-lg-3">
+                    <i class="fas fa-mug-hot"></i>
+                    <h1>Caffee</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis consequatur magnam ullam harum libero. Debitis, in vitae consequuntur minima saepe pariatur officiis iure dicta eius doloremque. A, nemo cumque. Numquam.</p>
+                  </div>
+                  </div>
+    
+</div>
+</section>
+
+
+
+
+
+      <!--<div class="row">
           <div class="col-md-6 mb-4 mb-lg-6 facility-image">
               <img src="/assets/images/message-image.jpeg" alt="massage-table">
           </div>
@@ -92,14 +132,14 @@
           </div>
       </div>
       </div>
-  </div>     
+  </div> */    
 </section>       
-
+-->
 
 
 
 <footer class="footer-area">
-  <div class='container-fluid bg-dark'>
+  <div class='container bg-dark'>
     <div class="row">
       <div class= "col-sm-12 mt-4 col-md-6 col-lg-3">
         <div class="timetable">
