--- a/facilities.html
+++ b/facilities.html
@@ -47,7 +47,7 @@
       <div class="col-12">
           <section class="jumbotron text-center">
             <h1 class="jumbotron-headings">
-              ThermalSpa
+              ThermalSpa Facilities
               </h1>
               <h2 class="jumbotron-headings">
               We are more than a simple spa center
@@ -56,90 +56,73 @@
       </div>
   </div>
 </div>
-<section class="page-section">
-  <div class="container mt-5">
 
-<div class="row services-area text-center">
-<div class="col-md-12 col-md-6 col-lg-3">
-  <i class="fas fa-swimming-pool"></i>
-  <h1>Indoor Pool</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis consequatur magnam ullam harum libero. Debitis, in vitae consequuntur minima saepe pariatur officiis iure dicta eius doloremque. A, nemo cumque. Numquam.</p>
-</div>
-</div>
-
-<div class="row services-area text-center">
-  <div class="col-md-12 col-md-6 col-lg-3">
-        <i class="fas fa-thermometer-three-quarters"></i>
-        <h1>Thermal Spa</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis consequatur magnam ullam harum libero. Debitis, in vitae consequuntur minima saepe pariatur officiis iure dicta eius doloremque. A, nemo cumque. Numquam.</p>
-        <div class="row services-find-out-more-button-row">
-          <div class="col-12 text-center">
-              <a href="#" class="btn btn--cta btn--grey">
-                Availiability
-              </a>
+<section class="facilities-services-section">
+  <div class="container-fluid">
+      <div class="row">
+          <div class="col-12">
+              <h2 class="section-heading uppercase">Services</h2>
+          </div>
+      </div>
+      <div class="row services-font-icons text-center">
+          <div class="col-12 col-md-6 col-lg-3">
+            <i class="fas fa-swimming-pool"></i>
+              <h5>Indoors Pool</h5>
+              <p>Our pool is specially designed with anti-slip flooring and the swim area allows for a variety of different activities. You can swim against the swim current which allows you to adjust to your own preferred level.Control your workout intensity, movement and speed with the hydropool, which specifically matches your needs, thus creating the prefect training environment.The hydropool has a Sonos Audio Surround System so you can listen to your favourite music while relaxing or training.</p>
+              <div class="row avaliability-info">
+                  <div class="col-12 text-center">
+                      <a href="facilities.html" class="btn btn--cta btn--grey">
+                          Avaliability
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3">
+            <i class="fas fa-hot-tub"></i>
+              <h5>Hammam</h5>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, suscipit blanditiis aperiam vel ut earum repellat ex necessitatibus id impedit praesentium, facilis officia accusamus, dolorem consectetur perspiciatis illo adipisci. Quae.</p>
+              <div class="row avaliability-info">
+                  <div class="col-12 text-center">
+                      <a href="#" class="btn btn--cta btn--grey">
+                          Avaliability
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3">
+              <i class="fas fa-user-alt"></i>
+              <h5>Thermal Spa</h5>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos facere dolores voluptate repellendus ipsum voluptatibus suscipit placeat nihil, obcaecati debitis vitae aliquid necessitatibus doloribus at et doloremque, odit voluptates neque.</p>
+              <div class="row avaliability-info">
+                  <div class="col-12 text-center">
+                      <a href="#" class="btn btn--cta btn--grey">
+                         Avaliability
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3"> 
+            <i class="fas fa-mug-hot"></i>
+              <h5>Lounge Coffee</h5>
+              <p>Refuel your body and soul within the serenity of Thermal Spa in our beautiful lounge cafe, which offers a selection of healthy and nourishing snacks and dishes. You can choose from a delicious range of  healthy meals, designed in collaboration with nutritionists or relax with a herbal tea, cold pressed juices and a protein shake.</p>    
+            
+              <div class="row avaliability-info">
+                  <div class="col-12 text-center">
+                      <a href="#" class="btn btn--cta btn--grey">
+                          Check Avaliability
+                      </a>
+                  </div>
+              </div>
           </div>
       </div>
       </div>
-  <div class="row services-area text-center">
-        <div class="col-md-12 col-md-6 col-lg-3">
-              <i class="fas fa-hot-tub"></i>
-              <h1>Hammam</h1>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis consequatur magnam ullam harum libero. Debitis, in vitae consequuntur minima saepe pariatur officiis iure dicta eius doloremque. A, nemo cumque. Numquam.</p>
-            </div>
-            </div>
-            <div class="row services-area text-center">
-              <div class="col-md-12 col-md-6 col-lg-3">
-                    <i class="fas fa-mug-hot"></i>
-                    <h1>Caffee</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis consequatur magnam ullam harum libero. Debitis, in vitae consequuntur minima saepe pariatur officiis iure dicta eius doloremque. A, nemo cumque. Numquam.</p>
-                  </div>
-                  </div>
-    
-</div>
 </section>
 
 
 
 
-
-      <!--<div class="row">
-          <div class="col-md-6 mb-4 mb-lg-6 facility-image">
-              <img src="/assets/images/message-image.jpeg" alt="massage-table">
-          </div>
-          <div class="col-md-6 mb-4 mb-lg-6 facility-info align-self-center p-5">
-              <h2>Private treatment room</h2>
-              <p>Explore our whole range of spa experience rooms — uplifting aromas, soothing steam and calming music make the perfect sensual and relaxing environment. 
-                Our private treatment rooms are equipped with electric couchs that enhances comfort while experiencing your favourite treatment. Featuring a high-quality frame and hard-wearing cushioning, all message tables include electronically adjusted positions for additional relaxation.
-                </p>    
-          </div>
-      </div>
-      <div class="row d-flex flex-column-reverse flex-md-row">
-          <div class="col-md-6 mb-4 mb-lg-6 facility-info p-2 align-self-center">
-              <h2>Indoors Pool</h2>
-              <p>Our pool is specially designed with anti-slip flooring and the swim area allows for a variety of different activities. You can swim against the swim current which allows you to adjust to your own preferred level.Control your workout intensity, movement and speed with the hydropool, which specifically matches your needs, thus creating the prefect training environment.The hydropool has a Sonos Audio Surround System so you can listen to your favourite music while relaxing or training.</p>    
-          </div>
-          <div class="col-md-6 mb-4 mb-lg-6 facility-image p-2">
-              <img src="/assets/images/pool-image.jpg" class="flex-end"alt="Kettlebells lined up in a row.">
-          </div>
-      </div>
-      <div class="row">
-          <div class="col-md-6 mb-4 mb-lg-6 facility-image">
-              <img src="/assets/images/coffee-image.jpg" alt="Man working out on weights machine.">
-          </div>
-          <div class="col-md-6 mb-4 mb-lg-6 facility-info align-self-center">
-              <h2>Lounge Caffe</h2>
-              <p>Refuel your body and soul within the serenity of Thermal Spa in our beautiful lounge cafe, which offers a selection of healthy and nourishing snacks and dishes. You can choose from a delicious range of  healthy meals, designed in collaboration with nutritionists or relax with a herbal tea, cold pressed juices and a protein shake.</p>    
-          </div>
-      </div>
-      </div>
-  </div> */    
-</section>       
--->
-
-
-
 <footer class="footer-area">
-  <div class='container bg-dark'>
+  <div class='container-fluid bg-dark'>
     <div class="row">
       <div class= "col-sm-12 mt-4 col-md-6 col-lg-3">
         <div class="timetable">
@@ -228,15 +211,11 @@
             </li>
         </ul>
     </div>
-</div>
 <div class="row">
 <div class="col-lg-12 mt-3 col-md-12 mt-2 col-sm-12 mt-2 col-xs-12 mt-2 text-center">
   <div class="footer-bottom">
     <p>© 2021 Copyright <a href="">ThermalSpa</a>. All Rights Reserved. </p>
   </div>
-</div>
-</div>
-</div>
 </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
