class given to font-icons for styling

--- a/facilities.html
+++ b/facilities.html
@@ -61,12 +61,12 @@
   <div class="container-fluid">
       <div class="row">
           <div class="col-12">
-              <h2 class="section-heading uppercase">Services</h2>
+              <h2 class="section-heading text-center uppercase p-5">Services</h2>
           </div>
       </div>
-      <div class="row services-font-icons text-center">
+      <div class="row text-center">
           <div class="col-12 col-md-6 col-lg-3">
-            <i class="fas fa-swimming-pool"></i>
+            <i class="fas fa-swimming-pool font-icons"></i>
               <h5>Indoors Pool</h5>
               <p>Our pool is specially designed with anti-slip flooring and the swim area allows for a variety of different activities. You can swim against the swim current which allows you to adjust to your own preferred level.Control your workout intensity, movement and speed with the hydropool, which specifically matches your needs, thus creating the prefect training environment.The hydropool has a Sonos Audio Surround System so you can listen to your favourite music while relaxing or training.</p>
               <div class="row avaliability-info">
@@ -78,7 +78,7 @@
               </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3">
-            <i class="fas fa-hot-tub"></i>
+            <i class="fas fa-hot-tub font-icons"></i>
               <h5>Hammam</h5>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, suscipit blanditiis aperiam vel ut earum repellat ex necessitatibus id impedit praesentium, facilis officia accusamus, dolorem consectetur perspiciatis illo adipisci. Quae.</p>
               <div class="row avaliability-info">
@@ -90,7 +90,7 @@
               </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3">
-              <i class="fas fa-user-alt"></i>
+            <i class="fas fa-thermometer-three-quarters font-icons"></i>
               <h5>Thermal Spa</h5>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos facere dolores voluptate repellendus ipsum voluptatibus suscipit placeat nihil, obcaecati debitis vitae aliquid necessitatibus doloribus at et doloremque, odit voluptates neque.</p>
               <div class="row avaliability-info">
@@ -102,7 +102,7 @@
               </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3"> 
-            <i class="fas fa-mug-hot"></i>
+            <i class="fas fa-mug-hot font-icons"></i>
               <h5>Lounge Coffee</h5>
               <p>Refuel your body and soul within the serenity of Thermal Spa in our beautiful lounge cafe, which offers a selection of healthy and nourishing snacks and dishes. You can choose from a delicious range of  healthy meals, designed in collaboration with nutritionists or relax with a herbal tea, cold pressed juices and a protein shake.</p>    
             
