facilities timetable text completed

--- a/facilities.html
+++ b/facilities.html
@@ -117,21 +117,21 @@
       </div>
       </div>
 </section>
-<section>
-  <div class="container-fluid facilities-timetable mt-5">
+<section class="facilities-timetable">
+  <div class="container-fluid mt-5">
 <div clas="row">
 <div class="col-12">
   <h1 class="time-table heading text-center">Facilities Timetable</h1>
 </div>
 </div>
 <div class="row">
-  <div class="col-12">
+  <div class="col-12 ">
     <nav>
       <div class="nav nav-tabs nav-justified" id="navTab" role="tablist">
           <a class="nav-item nav-link active" id="navPoolTab" data-toggle="tab" href="#navPool" role="tab" aria-controls="navPool" aria-selected="true">Indoor Pool</a>
           <a class="nav-item nav-link" id="navHammaTab" data-toggle="tab" href="#navHammam" role="tab" aria-controls="navHammam" aria-selected="false">Hammam</a>
           <a class="nav-item nav-link" id="naThermalSpaTab" data-toggle="tab" href="#navThermalSpa" role="tab" aria-controls="navThermalSpa" aria-selected="false">Thermal Spa</a>
-          <a class="nav-item nav-link" id="navThursdayTab" data-toggle="tab" href="#navLongeCafe" role="tab" aria-controls="navLoungeCafe" aria-selected="false">Caffe</a>                                                     
+          <a class="nav-item nav-link" id="navLoungeCafeTab" data-toggle="tab" href="#navLoungeCafe" role="tab" aria-controls="navLoungeCafe" aria-selected="false">Caffe</a>                                                     
       </div>
   </nav>
   </div>
@@ -315,8 +315,7 @@
 </div>
 </div> 
 </div>
-                       
-  <!--Pool Timetable Tab-->
+ <!--Thermal Timetable Tab-->
   <div class="tab-pane fade" id="navThermalSpa" role="tabpanel" aria-labelledby="navThermalSpaTab">
       <div class="container-fluid p-2 my-3">
           <div class="row timetable-class-row mx-md-5">
@@ -405,6 +404,32 @@
   </div>
 </div>                        
 </div>
+<!--Lounge Cafe Timetable Tab-->
+<div class="tab-pane fade" id="navLoungeCafe" role="tabpanel" aria-labelledby="navLoungeCafeTab">
+  <div class="container-fluid p-2 my-3">
+      <div class="row timetable-class-row mx-md-5">
+          <div class="col-12 col-md-4">
+              <p>Weekdays</p>
+          </div>
+          <div class="col-12 col-md-4">
+              <p>9:00 - 18:00</p>
+          </div>
+          <div class="col-12 col-md-4">
+            <p> 16:00 Kitchen Closed</p>
+          </div>
+          </div>
+      <div class="row timetable-class-row mx-md-5">
+          <div class="col-12 col-md-4">
+              <p>Weekends</p>
+          </div>
+          <div class="col-12 col-md-4">
+              <p>9:00 - 20:00 General</p>
+          </div>
+          <div class="col-12 col-md-4">
+              <p>18:00 Kitchen Closed</p>
+          </div>
+      </div>  
+</div>                      
 
 
 
