fixed cards-containers for positioning the buttons equally and side-to-side

--- a/facilities.html
+++ b/facilities.html
@@ -65,10 +65,10 @@
           </div>
       </div>
       <div class="row text-center">
-          <div class="col-12 col-md-6 col-lg-3">
+          <div class="col-12 col-md-6 col-lg-3 card-container">
             <i class="fas fa-swimming-pool font-icons"></i>
               <h5>Indoors Pool</h5>
-              <p>Our pool is specially designed with anti-slip flooring and the swim area allows for a variety of different activities. You can swim against the swim current which allows you to adjust to your own preferred level.Control your workout intensity, movement and speed with the hydropool, which specifically matches your needs, thus creating the prefect training environment.The hydropool has a Sonos Audio Surround System so you can listen to your favourite music while relaxing or training.</p>
+             <p class="services-info">Our pool is specially designed with anti-slip flooring and the swim area allows for a variety of different activities. You can swim against the swim current which allows you to adjust to your own preferred level.Control your workout intensity, movement and speed with the hydropool, which specifically matches your needs, thus creating the prefect training environment.The hydropool has a Sonos Audio Surround System so you can listen to your favourite music while relaxing or training.</p>
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
                     <a href="#" class="btn btn-link avaliability-button" role="button">
@@ -77,10 +77,10 @@
                   </div>
               </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-3">
+          <div class="col-12 col-md-6 col-lg-3 card-container">
             <i class="fas fa-hot-tub font-icons"></i>
               <h5>Hammam</h5>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, suscipit blanditiis aperiam vel ut earum repellat ex necessitatibus id impedit praesentium, facilis officia accusamus, dolorem consectetur perspiciatis illo adipisci. Quae.</p>
+              <p class="services-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, suscipit blanditiis aperiam vel ut earum repellat ex necessitatibus id impedit praesentium, facilis officia accusamus, dolorem consectetur perspiciatis illo adipisci. Quae.</p>
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
                     <a href="#" class="btn btn-link avaliability-button" role="button">
@@ -89,10 +89,10 @@
                   </div>
               </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-3">
+          <div class="col-12 col-md-6 col-lg-3 card-container">
             <i class="fas fa-thermometer-three-quarters font-icons"></i>
               <h5>Thermal Spa</h5>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos facere dolores voluptate repellendus ipsum voluptatibus suscipit placeat nihil, obcaecati debitis vitae aliquid necessitatibus doloribus at et doloremque, odit voluptates neque.</p>
+              <p class="services-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos facere dolores voluptate repellendus ipsum voluptatibus suscipit placeat nihil, obcaecati debitis vitae aliquid necessitatibus doloribus at et doloremque, odit voluptates neque.</p>
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
                     <a href="#" class="btn btn-link avaliability-button" role="button">
@@ -101,10 +101,10 @@
                   </div>
               </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-3"> 
+          <div class="col-12 col-md-6 col-lg-3 card-container"> 
             <i class="fas fa-mug-hot font-icons"></i>
               <h5>Lounge Coffee</h5>
-              <p>Refuel your body and soul within the serenity of Thermal Spa in our beautiful lounge cafe, which offers a selection of healthy and nourishing snacks and dishes. You can choose from a delicious range of  healthy meals, designed in collaboration with nutritionists or relax with a herbal tea, cold pressed juices and a protein shake.</p>    
+              <p class="services-info">Refuel your body and soul within the serenity of Thermal Spa in our beautiful lounge cafe, which offers a selection of healthy and nourishing snacks and dishes. You can choose from a delicious range of  healthy meals, designed in collaboration with nutritionists or relax with a herbal tea, cold pressed juices and a protein shake.</p>    
             
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
