facilities-buttons liked with timetable tabbed navigation

--- a/facilities.html
+++ b/facilities.html
@@ -71,7 +71,7 @@
              <p class="services-info">Our pool is specially designed with anti-slip flooring and the swim area allows for a variety of different activities. You can swim against the swim current which allows you to adjust to your own preferred level.Control your workout intensity, movement and speed with the hydropool, which specifically matches your needs, thus creating the prefect training environment.The hydropool has a Sonos Audio Surround System so you can listen to your favourite music while relaxing or training.</p>
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
-                    <a href="#" class="btn btn-link avaliability-button" role="button">
+                    <a href="#navPool" class="btn btn-link avaliability-button" role="button">
                       Check Avaliability
                   </a>
                   </div>
@@ -83,7 +83,7 @@
               <p class="services-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, suscipit blanditiis aperiam vel ut earum repellat ex necessitatibus id impedit praesentium, facilis officia accusamus, dolorem consectetur perspiciatis illo adipisci. Quae.</p>
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
-                    <a href="#" class="btn btn-link avaliability-button" role="button">
+                    <a href="#navHammam" class="btn btn-link avaliability-button" role="button">
                       Check Avaliability
                   </a>
                   </div>
@@ -95,7 +95,7 @@
               <p class="services-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos facere dolores voluptate repellendus ipsum voluptatibus suscipit placeat nihil, obcaecati debitis vitae aliquid necessitatibus doloribus at et doloremque, odit voluptates neque.</p>
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
-                    <a href="#" class="btn btn-link avaliability-button" role="button">
+                    <a href="#navThermalSpa" class="btn btn-link avaliability-button" role="button">
                       Check Avaliability
                   </a>
                   </div>
@@ -108,7 +108,7 @@
             
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
-                      <a href="#" class="btn btn-link avaliability-button" role="button">
+                      <a href="#navLoungeCafe" class="btn btn-link avaliability-button" role="button">
                           Check Avaliability
                       </a>
                   </div>
@@ -129,9 +129,9 @@
     <nav>
       <div class="nav nav-tabs nav-justified" id="navTab" role="tablist">
           <a class="nav-item nav-link active" id="navPoolTab" data-toggle="tab" href="#navPool" role="tab" aria-controls="navPool" aria-selected="true">Indoor Pool</a>
-          <a class="nav-item nav-link" id="navHammaTab" data-toggle="tab" href="#navHammam" role="tab" aria-controls="navHammam" aria-selected="false">Hammam</a>
-          <a class="nav-item nav-link" id="naThermalSpaTab" data-toggle="tab" href="#navThermalSpa" role="tab" aria-controls="navThermalSpa" aria-selected="false">Thermal Spa</a>
-          <a class="nav-item nav-link" id="navLoungeCafeTab" data-toggle="tab" href="#navLoungeCafe" role="tab" aria-controls="navLoungeCafe" aria-selected="false">Caffe</a>                                                     
+          <a class="nav-item nav-link" id="navHammaTab" data-toggle="tab" href="#navHam" role="tab" aria-controls="navHammam" aria-selected="false">Hammam</a>
+          <a class="nav-item nav-link" id="naThermalSpaTab" data-toggle="tab" href="#navThermal" role="tab" aria-controls="navThermalSpa" aria-selected="false">Thermal Spa</a>
+          <a class="nav-item nav-link" id="navLoungeCafeTab" data-toggle="tab" href="#navLounge" role="tab" aria-controls="navLoungeCafe" aria-selected="false">Caffe</a>                                                     
       </div>
   </nav>
   </div>
@@ -316,7 +316,7 @@
 </div> 
 </div>
  <!--Thermal Timetable Tab-->
-  <div class="tab-pane fade" id="navThermalSpa" role="tabpanel" aria-labelledby="navThermalSpaTab">
+  <div class="tab-pane fade" id="navThermal" role="tabpanel" aria-labelledby="navThermalSpaTab">
       <div class="container-fluid p-2 my-3">
           <div class="row timetable-class-row mx-md-5">
               <div class="col-12 col-md-3">
@@ -405,7 +405,7 @@
 </div>                        
 </div>
 <!--Lounge Cafe Timetable Tab-->
-<div class="tab-pane fade" id="navLoungeCafe" role="tabpanel" aria-labelledby="navLoungeCafeTab">
+<div class="tab-pane fade" id="navLounge" role="tabpanel" aria-labelledby="navLoungeCafeTab">
   <div class="container-fluid p-2 my-3">
       <div class="row timetable-class-row mx-md-5">
           <div class="col-12 col-md-4">
