--- a/facilities.html
+++ b/facilities.html
@@ -95,7 +95,7 @@
               <p class="services-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos facere dolores voluptate repellendus ipsum voluptatibus suscipit placeat nihil, obcaecati debitis vitae aliquid necessitatibus doloribus at et doloremque, odit voluptates neque.</p>
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
-                    <a href="#navThermalSpa" class="btn btn-link avaliability-button" role="button">
+                    <a href="#navThermal" class="btn btn-link avaliability-button" role="button">
                       Check Avaliability
                   </a>
                   </div>
@@ -108,7 +108,7 @@
             
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
-                      <a href="#navLoungeCafe" class="btn btn-link avaliability-button" role="button">
+                      <a href="#navLounge" class="btn btn-link avaliability-button" role="button">
                           Check Avaliability
                       </a>
                   </div>
@@ -129,9 +129,9 @@
     <nav>
       <div class="nav nav-tabs nav-justified" id="navTab" role="tablist">
           <a class="nav-item nav-link active" id="navPoolTab" data-toggle="tab" href="#navPool" role="tab" aria-controls="navPool" aria-selected="true">Indoor Pool</a>
-          <a class="nav-item nav-link" id="navHammaTab" data-toggle="tab" href="#navHam" role="tab" aria-controls="navHammam" aria-selected="false">Hammam</a>
-          <a class="nav-item nav-link" id="naThermalSpaTab" data-toggle="tab" href="#navThermal" role="tab" aria-controls="navThermalSpa" aria-selected="false">Thermal Spa</a>
-          <a class="nav-item nav-link" id="navLoungeCafeTab" data-toggle="tab" href="#navLounge" role="tab" aria-controls="navLoungeCafe" aria-selected="false">Caffe</a>                                                     
+          <a class="nav-item nav-link" id="navHammaTab" data-toggle="tab" href="#navHammam" role="tab" aria-controls="navHammam" aria-selected="false">Hammam</a>
+          <a class="nav-item nav-link" id="naThermalSpaTab" data-toggle="tab" href="#navThermalSpa" role="tab" aria-controls="navThermalSpa" aria-selected="false">Thermal Spa</a>
+          <a class="nav-item nav-link" id="navLoungeCafeTab" data-toggle="tab" href="#navLoungeCafe" role="tab" aria-controls="navLoungeCafe" aria-selected="false">Caffe</a>                                                     
       </div>
   </nav>
   </div>
@@ -316,7 +316,7 @@
 </div> 
 </div>
  <!--Thermal Timetable Tab-->
-  <div class="tab-pane fade" id="navThermal" role="tabpanel" aria-labelledby="navThermalSpaTab">
+  <div class="tab-pane fade" id="navThermalSpa" role="tabpanel" aria-labelledby="navThermalSpaTab">
       <div class="container-fluid p-2 my-3">
           <div class="row timetable-class-row mx-md-5">
               <div class="col-12 col-md-3">
@@ -405,7 +405,7 @@
 </div>                        
 </div>
 <!--Lounge Cafe Timetable Tab-->
-<div class="tab-pane fade" id="navLounge" role="tabpanel" aria-labelledby="navLoungeCafeTab">
+<div class="tab-pane fade" id="navLoungeCafe" role="tabpanel" aria-labelledby="navLoungeCafeTab">
   <div class="container-fluid p-2 my-3">
       <div class="row timetable-class-row mx-md-5">
           <div class="col-12 col-md-4">
