facilities tabbed navigation styled

--- a/facilities.html
+++ b/facilities.html
@@ -57,7 +57,7 @@
   </div>
 </div>
 
-<section class="facilities-services-section">
+<section class="facilities-services-section mb-5">
   <div class="container-fluid">
       <div class="row">
           <div class="col-12">
@@ -121,8 +121,13 @@
   <div class="container-fluid mt-5">
 <div clas="row">
 <div class="col-12">
-  <h1 class="time-table heading text-center">Facilities Timetable</h1>
+  <h1 class="time-table heading text-center mb-4">Facilities Timetable</h1>
 </div>
+</div>
+<div class="row">
+  <div class="col-md-12 text-center mb-5">
+    <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam doloremque, facilis exercitationem voluptatem, iusto eos accusantium sit distinctio magnam culpa officia illo ad provident, natus atque libero! Enim, necessitatibus laborum.</h5>
+  </div>
 </div>
 <div class="row">
   <div class="col-12 ">
