Text changes, added picture on home page

--- a/facilities.html
+++ b/facilities.html
@@ -80,7 +80,9 @@
           <div class="col-12 col-md-6 col-lg-3 card-container">
             <i class="fas fa-hot-tub font-icons"></i>
               <h5>Hammam</h5>
-              <p class="services-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, suscipit blanditiis aperiam vel ut earum repellat ex necessitatibus id impedit praesentium, facilis officia accusamus, dolorem consectetur perspiciatis illo adipisci. Quae.</p>
+              <p class="services-info">Our spa centre offers Moroccan and Turkish Hammam facilities to double the level of your relax, revive, restore and re-energise.
+                Marrocan Hammam mineral rich-water is drawn from the only working Artesian well in London and offers the  benefits of spa treatments of authentic Moroccan Hammam delivered with uplifting aromas of roses, eucalyptus, Aragan oil and other native Moroccan products. 
+                Turkish Hammam offers ancient Turkish traditional methods of bathing to cleanse and exfoliate impurities from the body, using special techniques in the warmth and revitalisation of the Hammam Room.</p>
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
                     <a href="#navHammam" class="btn btn-link avaliability-button" role="button">
@@ -92,7 +94,9 @@
           <div class="col-12 col-md-6 col-lg-3 card-container">
             <i class="fas fa-thermometer-three-quarters font-icons"></i>
               <h5>Thermal Spa</h5>
-              <p class="services-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos facere dolores voluptate repellendus ipsum voluptatibus suscipit placeat nihil, obcaecati debitis vitae aliquid necessitatibus doloribus at et doloremque, odit voluptates neque.</p>
+              <p class="services-info"> Steam away the stress and feel your worries wash away with our unmissable sauna and steam room.  with a temperature reaching 90 C,
+A ‘dry’ heat treatment in a wood-lined room  designed to induce perspiration in order to cleanse the body of impurities.
+              </p>
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
                     <a href="#navThermal" class="btn btn-link avaliability-button" role="button">
