--- a/facilities.html
+++ b/facilities.html
@@ -30,10 +30,10 @@
           <a class="nav-link" href="#">Services</a>
         </li>
         <li class="nav-item text-right">
-          <a class="nav-link" href="#">Facilities</a>
+          <a class="nav-link" href="facilities.html">Facilities</a>
         </li>
         <li class="nav-item text-right">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
        
       </ul>
